<resources>
    <string name="app_name">CaculatorApp</string>
    <string name="simple_calculator">简易计算器</string>
    <string name="cancel">CE</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="clean">C</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="radical">√</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="reciprocal">1/X</string>
</resources>